[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Projectile.gd" type="Script" id=3]

[sub_resource type="SphereShape" id=1]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.2, 0.3, 0.3 )

[node name="Projectile" type="RigidBody"]
collision_layer = 0
gravity_scale = 0.0
script = ExtResource( 3 )
speed = 10
damage = 1
texture = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="Area" type="Area" parent="."]
collision_layer = 0

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 2 )

[node name="SelfDestroyTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="MeshInstance" type="MeshInstance" parent="."]

[node name="Arc" type="Tween" parent="."]

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="SelfDestroyTimer" to="." method="_on_SelfDestroyTimer_timeout"]
